Bug 309482 - Setting for Refresh Time not used
Summary: Setting for Refresh Time not used
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: 4.9
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-03 15:15 UTC by Tilman Klaeger
Modified: 2012-12-14 17:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tilman Klaeger 2012-11-03 15:15:16 UTC
I added my ownCloud to Akonadi and told it to refresh every 60 minutes. But I still watch a connect every 5 minutes in my access logs on the webserver. First I had acutually set it to 5 minutes and changed it later. But also a recreation of the resource and setting Refresh to 60 minutes at the beginning did not change this behaviour.
Also this automatic sync seems not to work, just as in Bug #309481.

Reproducible: Always
Comment 1 Grégory Oestreicher 2012-11-23 20:27:42 UTC
Confirmed here too.

There's a fixed interval set for the collection tree sync that the resource cannot change. The items sync interval however matches the configured interval. In your server log you should see a series of PROPFIND requests that is the collection tree sync, and a series of REPORT requests that is the items sync.

I'm trying to reach the Akonadi devs about this as the source seems to be there.

Cheers,
Grégory
Comment 2 Grégory Oestreicher 2012-12-14 17:32:54 UTC
Git commit d9edf415880370cd96566b556c04678d0961fe38 by Grégory Oestreicher.
Committed on 14/12/2012 at 18:30.
Pushed by goestreicher into branch 'master'.

Respect collection cache policy refresh interval for collection tree sync

REVIEW: 107709

M  +6    -1    server/src/intervalcheck.cpp

http://commits.kde.org/akonadi/d9edf415880370cd96566b556c04678d0961fe38