Respect collection cache policy refresh interval for collection tree sync

REVIEW: 107709
BUG: 309482